tests/baselines/reference/prototypePropertyAssignmentMergeAcrossFiles2.errors.txt
tests/cases/conformance/salsa/other.js(5,5): error TS2339: Property 'wat' does not exist on type 'One'.
tests/cases/conformance/salsa/other.js(10,5): error TS2339: Property 'wat' does not exist on type 'Two'.


==== tests/cases/conformance/salsa/prototypePropertyAssignmentMergeAcrossFiles2.js (0 errors) ====
    var Ns = {}
    Ns.One = function() {};
    Ns.Two = function() {};
    
    Ns.One.prototype = {
      ok() {},
    };
    Ns.Two.prototype = {
    }
    
==== tests/cases/conformance/salsa/other.js (2 errors) ====
    /**
     * @type {Ns.One}
     */
    var one;
    one.wat;
        ~~~
!!! error TS2339: Property 'wat' does not exist on type 'One'.
    /**
     * @type {Ns.Two}
     */
    var two;
    two.wat;
        ~~~
!!! error TS2339: Property 'wat' does not exist on type 'Two'.
    